# jlens-scaling

./: .gitignore  NOTICE  README.md  ROADMAP.md  pyproject.toml
configs/: gpt2-medium.yaml  gpt2-small.yaml  qwen3-0.6b.yaml  qwen3-1.7b-base.yaml  qwen3-1.7b.yaml
data/anthropic/: README.md
docs/: preregistration-draft.md
notebooks/: colab_fit.ipynb
results/: scaling.json
results/gpt2-medium/: fit_summary.json  structure.json  two_hop.json  verbal_report.json
results/gpt2-small/: fit_summary.json  structure.json  two_hop.json  verbal_report.json
results/qwen3-0.6b/: fit_summary.json  structure.json  two_hop.json  verbal_report.json
results/qwen3-1.7b/: fit_summary.json  structure.json  two_hop.json  verbal_report.json
results/qwen3-1.7b-base/: fit_summary.json  structure.json  two_hop.json  verbal_report.json
scripts/: aggregate.py  fit_lens.py  lens_from_checkpoint.py  make_figures.py  make_scaling_figure.py  run_experiment.py  run_structure.py  upload_lenses.py
src/jlens_scaling/: __init__.py  config.py  corpus.py  metrics.py  models.py  readout.py  steering.py  structure.py  viz.py
src/jlens_scaling/experiments/: common.py  two_hop.py  verbal_report.py
tests/: test_aggregate.py  test_config.py  test_corpus.py  test_experiments.py  test_fit_cli.py  test_lens_from_checkpoint.py  test_readout.py  test_steering.py  test_structure.py  test_two_hop.py  test_two_hop_swap.py
